<resources>
    <string name="app_name">Tipsy</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_your_service">How was your service?</string>
    <string name="amazing_20_tip">Amazing (20% tip)</string>
    <string name="good_18_tip">Good (18% tip)</string>
    <string name="okay_15_tip">Okay (15% tip)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
    <string name="service_quality_icon">Service Quality Icon</string>
    <string name="round_up_tip_icon">Round Up Tip Icon</string>
</resources>